tests/errors/propagateWrongRet.milo
// @error: requires function to return

enum Option<T> {
    Some(T),
    None,
}

fn bad(opt: Option<i32>): i32 {
    let val = opt?
    return val
}

fn main(): i32 {
    return bad(Option.Some(1))
}

